--- a/StareMedic/Views/SearchCC.xaml
+++ b/StareMedic/Views/SearchCC.xaml
@@ -322,7 +322,7 @@
                                     x:Name="Addcc"
                                     Clicked="BtnNewCC_Clicked">
                                 <MenuFlyoutItem.KeyboardAccelerators>
-                                    <KeyboardAccelerator Key="Enter" Modifiers="Ctrl"/>
+                                    <KeyboardAccelerator Key="S" Modifiers="Ctrl"/>
                                 </MenuFlyoutItem.KeyboardAccelerators>
                             </MenuFlyoutItem>
                         </MenuFlyout>
