--- a/StareMedic/Views/Viewers/PatientControll.xaml
+++ b/StareMedic/Views/Viewers/PatientControll.xaml
@@ -98,6 +98,7 @@
                        TextColor="{StaticResource Black}"/>
                     <Picker 
                        x:Name="pickerSexo"
+                        Style="{StaticResource entryPicker}"
                        MaximumWidthRequest="120"
                         FontFamily="HelveticaNeue"
                        TextColor="{StaticResource Principal}"
@@ -128,6 +129,7 @@
                         x:Name="pickerEdoCivil"
                         MaximumWidthRequest="250"
                         Grid.Column="3"
+                        Style="{StaticResource entryPicker}"
                         FontFamily="HelveticaNeue"
                         TextColor="{StaticResource Principal}"
                         BackgroundColor="{StaticResource Alter1}"
@@ -178,6 +180,7 @@
                         FontFamily="HelveticaNeue"
                         Grid.Column="5"
                         HeightRequest="25"
+                        Style="{StaticResource Entrys}"
                         TextColor="{StaticResource Principal}"
                         BackgroundColor="{StaticResource Alter1}"
                         MinimumWidthRequest="100"
@@ -614,7 +617,7 @@
                                     x:Name="Addpatient"
                                     Clicked="BtnGuardar_Clicked">
                                 <MenuFlyoutItem.KeyboardAccelerators>
-                                    <KeyboardAccelerator Key="Enter" Modifiers="None"/>
+                                    <KeyboardAccelerator Key="S" Modifiers="Ctrl"/>
                                 </MenuFlyoutItem.KeyboardAccelerators>
                             </MenuFlyoutItem>
                         </MenuFlyout>
