--- a/StareMedic/Views/Viewers/MedicControll.xaml
+++ b/StareMedic/Views/Viewers/MedicControll.xaml
@@ -17,7 +17,7 @@
     </ContentPage.Resources>
     
     <Grid
-        RowDefinitions="Auto,*,*"
+        RowDefinitions="Auto,Auto,*,*"
         Padding="30"
         BackgroundColor="{StaticResource Secundario}">
         
@@ -48,24 +48,31 @@
                        Style="{StaticResource entryName}"
                        Placeholder="Nombre del Medico..."
                        TextChanged="EntryName_TextChanged"/>
-                <BoxView 
-                    Grid.Row="1"
-                    Grid.ColumnSpan="2"
-                    Style="{StaticResource BreakLine}"/>
+                
             </Grid>
+
+        
+            
         </HorizontalStackLayout>
         
-        <Grid
+        <BoxView 
             Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Style="{StaticResource BreakLine}"/>
+        
+        <Grid
+            Grid.Row="2"
             VerticalOptions="Start"
             Padding="30"
-            ColumnDefinitions="Auto,*"
-            RowDefinitions="*">
+            ColumnDefinitions="Auto,*,Auto,*"
+            RowSpacing="100"
+            RowDefinitions="*,*">
 
             <Label Text="Telefono:"
                    Grid.Column="0"
                    VerticalOptions="Center"
                    Style="{StaticResource labelEntry}"/>
+            
             <Entry x:Name="EntryTelefono"
                    Grid.Column="1"
                    Margin="30,0,30,0"
@@ -73,14 +80,56 @@
                    HorizontalOptions="Start"
                    Style="{StaticResource entryPhone}"
                    TextChanged="EntryTelefono_TextChanged"/>
+            
+            <Label Text="Domicilio:"
+                   Grid.Column="2"
+                   VerticalOptions="Center"
+                   Style="{StaticResource labelEntry}"/>
 
-                
+            <Entry x:Name="EntryDomicilio"
+                   Grid.Column="3"
+                   Margin="30,0,30,0"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Start"
+                   Style="{StaticResource Entrys}"
+                   TextChanged="EntryDomicilio_TextChanged"/>
+
+            <Label Text="Ciudad:"
+                   Grid.Column="0"
+                   Grid.Row="1"
+                   VerticalOptions="Center"
+                   Style="{StaticResource labelEntry}"/>
+
+            <Entry x:Name="EntryCiudad"
+                   Grid.Column="1"
+                   Grid.Row="1"
+                   Margin="30,0,30,0"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Start"
+                   Style="{StaticResource Entrys}"
+                   TextChanged="EntryCiudad_TextChanged"/>
+
+            <Label Text="Estado:"
+                   Grid.Column="2"
+                   Grid.Row="1"
+                   VerticalOptions="Center"
+                   Style="{StaticResource labelEntry}"/>
+
+            <Entry x:Name="EntryEstado"
+                   Grid.Column="4"
+                   Grid.Row="1"
+                   Margin="30,0,30,0"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Start"
+                   Style="{StaticResource Entrys}"
+                   TextChanged="EntryEstado_TextChanged"/>
+
         </Grid>
             
      
         <!--Confirm things-->
         <Grid 
-            Grid.Row="2"
+            Grid.Row="3"
             VerticalOptions="EndAndExpand" 
             Padding="20"
             Margin="10,0,0,0" 
