--- a/StareMedic/Views/RegisterClinicalCase.xaml
+++ b/StareMedic/Views/RegisterClinicalCase.xaml
@@ -417,7 +417,7 @@
             <Grid
             Grid.Row="6"
             Padding="30"
-            HorizontalOptions="StartAndExpand"
+            HorizontalOptions="FillAndExpand"
             VerticalOptions="EndAndExpand">
 
             <Grid.ColumnDefinitions>
@@ -430,7 +430,7 @@
                 <Button
                 x:Name="BtnCancel"
                 Clicked="BtnCancel_Clicked"
-                Text="Cancelar"
+                Text="Cancelar (Esc)"
                     FontFamily="HelveticaNeue"
                 HeightRequest="50"
                 BackgroundColor="{StaticResource Alter2}"
@@ -438,7 +438,7 @@
                 WidthRequest="200"
                 Grid.Column="0"                
                 VerticalOptions="End"
-                HorizontalOptions="Center">
+                HorizontalOptions="Start">
 
                 <VisualStateManager.VisualStateGroups>
                     <VisualStateGroupList>
@@ -472,16 +472,16 @@
             <Button
                 x:Name="BtnGuardar"
                 Clicked="BtnGuardar_Clicked"
-                Text="Confirmar Admision"
+                Text="Confirmar Admision (Ctrl + S)"
                 HeightRequest="50"
                 FontFamily="HelveticaNeue"
                 BackgroundColor="{StaticResource Alter2}"
                 TextColor="{StaticResource Principal}"
                 Margin="200,0,200,0"
-                WidthRequest="200"
+                WidthRequest="250"
                 VerticalOptions="End"
                 Grid.Column="1"
-                HorizontalOptions="End">
+                HorizontalOptions="EndAndExpand">
 
                 <VisualStateManager.VisualStateGroups>
                     <VisualStateGroupList>
